--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -124,7 +124,7 @@
   border-color: var(--main-color);
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 374px) {
   .hero-list {
     max-width: 320px;
     padding-bottom: 24px;
